--- a/potatohead.html
+++ b/potatohead.html
@@ -26,7 +26,7 @@
 			<img id="cane">
 			<img id="earrings">
 			<img id="hatflower">
-			<img id="boosters">
+			<img id="boosters" src="assets/boosters.png">
 		</div>
 
 </body>
