--- a/potatohead.html
+++ b/potatohead.html
@@ -14,8 +14,7 @@
 		<div id="potato">
 			<img id="body" src="assets/body.png">
 			<img id="arms_image">
-			<img id="ears_image">
-			<img id="eyes_image" >
+			<img id="eyes_image" src="assets/eyes.png">
 			<img id="mouth_image" >
 			<img id="nose_image" >
 			<img id="eyebrows_image" >
