--- a/potatohead.html
+++ b/potatohead.html
@@ -10,12 +10,11 @@
 
 	<body>
 		<h1>Mr. Potato Head</h1>
-
 		<div id="potato">
 			<img id="body" src="assets/body.png">
 			<img id="arms_image">
 			<img id="ears_image">
-			<img id="eyes_image" >
+			<img id="eyes_image" src="assets/eyes.png">
 			<img id="mouth_image" >
 			<img id="nose_image" >
 			<img id="eyebrows_image" >
@@ -28,6 +27,5 @@
 			<img id="hatflower">
 			<img id="boosters">
 		</div>
-
 </body>
 </html>
